overflow stlying issue

--- a/web/themes/custom/lia/src/scss/base/_elements.scss
+++ b/web/themes/custom/lia/src/scss/base/_elements.scss
@@ -1,5 +1,8 @@
 // Global elements styling, e.g. for headings, buttons, links, etc.
 // -----------------------------------------------------------------------------
+body {
+  overflow-x: hidden;
+}
 h1,
 h1.page-title,
 h2,
